@@ -14,5 +14,3 @@
 -Dfile.encoding=UTF-8
 # Allow loading dynamic agent used by JOL
 -XX:+EnableDynamicAgentLoading
-# https://bugs.openjdk.org/browse/JDK-8327134
--Djava.security.manager=allow
